RESOLVED FIXED28704
REGRESSION (r47630): fast/repaint/background-generated.html is failing
https://bugs.webkit.org/show_bug.cgi?id=28704
Summary REGRESSION (r47630): fast/repaint/background-generated.html is failing
mitz
Reported 2009-08-24 23:37:03 PDT
After r47630, fast/repaint/background-generated.html is failing because the unspecified background-size is interpreted as 'auto' by mustRepaintFillLayers(). The type is initialized to SizeLength but it should be SizeNone.
Attachments
Patch (untested) (1.61 KB, patch)
2009-08-24 23:46 PDT, mitz
no flags
Patch (2.60 KB, patch)
2009-08-25 10:01 PDT, mitz
andersca: review+
mitz
Comment 1 2009-08-24 23:46:51 PDT
Created attachment 38533 [details] Patch (untested)
mitz
Comment 2 2009-08-25 10:01:28 PDT
Anders Carlsson
Comment 3 2009-08-25 10:06:33 PDT
Comment on attachment 38553 [details] Patch r=me
mitz
Comment 4 2009-08-25 10:10:06 PDT
mitz
Comment 5 2009-08-25 16:16:45 PDT
Thanks for closing the bug, Eric!
Note You need to log in before you can comment on or make changes to this bug.