REGRESSION (r47630): fast/repaint/background-generated.html is failing https://bugs.webkit.org/show_bug.cgi?id=28704

Reviewed by Anders Carlsson.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateFillTileSize): Handle SizeNone.
* rendering/style/FillLayer.cpp:
(WebCore::FillLayer::FillLayer): Initialize the size type to SizeNone.
* rendering/style/FillLayer.h:
(WebCore::FillSize::FillSize): Changed assignment to initialization and
    removed redundant assignment to size.



Canonical link: https://commits.webkit.org/39327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47749 268f45cc-cd09-0410-ab3c-d52691b4dbfc